--- a/images/apache_php56/apache2/ports.conf
+++ b/images/apache_php56/apache2/ports.conf
@@ -1,5 +1,8 @@
 # The single ports for http listening are defined in each vhost config file
 
+Listen 80
+Listen 82
+
 <IfModule ssl_module>
 	Listen 443
 </IfModule>
