--- a/images/cli_php56/Dockerfile
+++ b/images/cli_php56/Dockerfile
@@ -19,6 +19,8 @@ RUN echo $DOCKER_TIMEZONE > /etc/timezone; dpkg-reconfigure -f noninteractive tz
 # -----------------------------------------------------------------------------
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
     curl \
+    wget \
+    telnet \
     git \
     pwgen \
     locales \
