added varnish dependency on cli in docker-compose dev template

--- a/docker-compose-dev-template.yml
+++ b/docker-compose-dev-template.yml
@@ -106,6 +106,7 @@ services:
           - apparmor:unconfined
         depends_on:
            - web
+           - cli
 
     haproxy:
         image: klabs/haproxy
