--- a/images/apache_php7/Dockerfile
+++ b/images/apache_php7/Dockerfile
@@ -20,6 +20,7 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
     pwgen \
     sudo \
     nano \
+    unzip \
     locales \
     imagemagick \
     poppler-utils \
