cli_php7 - added unzip for composer

--- a/images/cli_php7/Dockerfile
+++ b/images/cli_php7/Dockerfile
@@ -26,6 +26,7 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
     locales \
     sudo \
     cron \
+    unzip \
     vim \
     nano \
     mysql-client \
