--- a/docker-compose-frontend-template.yml
+++ b/docker-compose-frontend-template.yml
@@ -13,16 +13,14 @@ services:
         hostname: ${DOCKER_PROJECT_NAME}_web
         container_name: web
         ports:
-            - "82:82"
-            - "88:88"
             - "80:80"
         volumes:
             - ./config/apache/sites-available/001-dynamic-vhost-ez5.conf:/etc/apache2/sites-available/001-dynamic-vhost-ez5.conf
             - ./config/apache/sites-available/ez5-common.conf:/etc/apache2/sites-available/ez5-common.conf
-            - "$DOCKER_WWW_ROOT:/var/www"
             - ./logs/apache/:/var/log/apache2
-            - ./config/apache/php5/custom_vars.ini:/etc/php5/apache2/conf.d/custom_vars.ini
-            - ./config/apache/php5/timezone.ini:/etc/php5/apache2/conf.d/timezone.ini
+            - "./config/apache/php5/custom_vars.ini:$DOCKER_PHP_CONF_PATH/apache2/conf.d/custom_vars.ini"
+            - "./config/apache/php5/timezone.ini:$DOCKER_PHP_CONF_PATH/apache2/conf.d/timezone.ini"
+            - "$DOCKER_WWW_ROOT:/var/www"
             - "$DOCKER_STORAGE_LOCAL_PATH:$DOCKER_STORAGE_MOUNT_POINT"
         env_file:
             - docker-compose.env
@@ -36,15 +34,13 @@ services:
         container_name: cli
         privileged: true
         volumes:
-            - "$DOCKER_WWW_ROOT:/var/www"
             - ./logs/cli:/var/log/php
-            - ./config/cli/php5/custom_vars.ini:/etc/php5/cli/conf.d/custom_vars.ini
-            - ./config/cli/php5/timezone.ini:/etc/php5/cli/conf.d/timezone.ini
-            # files in /tmp/cron.d get managed by bootstrap.sh
-            - ./config/cli/cron.d:/tmp/cron.d
             - ~/.gitconfig:/home/site/.gitconfig
             - ~/.ssh/config:/home/site/.ssh/config
             - "$SSH_AUTH_SOCK:/ssh-agent"
+            - "./config/cli/php5/custom_vars.ini:$DOCKER_PHP_CONF_PATH/cli/conf.d/custom_vars.ini"
+            - "./config/cli/php5/timezone.ini:$DOCKER_PHP_CONF_PATH/cli/conf.d/timezone.ini"
+            - "$DOCKER_WWW_ROOT:/var/www"
             - "$DOCKER_STORAGE_LOCAL_PATH:$DOCKER_STORAGE_MOUNT_POINT"
         environment:
             - SSH_AUTH_SOCK=/ssh-agent
