--- a/images/apache_php54/Dockerfile
+++ b/images/apache_php54/Dockerfile
@@ -22,6 +22,7 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
     nano \
     locales \
     imagemagick \
+    jpegoptim \
     poppler-utils \
     openjdk-7-jre-headless;
 
