--- a/docker-compose-dev-template.yml
+++ b/docker-compose-dev-template.yml
@@ -141,6 +141,7 @@ services:
             - docker-compose.env.local
         cap_add:
             - SYS_PTRACE
+        command: ["/root/bootstrap.sh", "mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci"]
 
     # official phpmyadmin image
     phpmyadmin:
