--- a/images/cli_php54/Dockerfile
+++ b/images/cli_php54/Dockerfile
@@ -19,7 +19,7 @@ RUN echo $DOCKER_TIMEZONE > /etc/timezone; dpkg-reconfigure -f noninteractive tz
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
     curl \
     wget \
-    telnet \
+    netcat \
     git \
     pwgen \
     locales \
