--- a/docker-compose-dev-template.yml
+++ b/docker-compose-dev-template.yml
@@ -19,6 +19,7 @@ services:
             - ./config/apache/sites-available/001-dynamic-vhost-ez5.conf:/etc/apache2/sites-available/001-dynamic-vhost-ez5.conf
             - ./config/apache/sites-available/002-dynamic-vhost-ezplatform.conf:/etc/apache2/sites-available/002-dynamic-vhost-ezplatform.conf
             - ./config/apache/sites-available/003-dynamic-vhost-ez4.conf:/etc/apache2/sites-available/003-dynamic-vhost-ez4.conf
+            - ./config/apache/sites-available/004-dynamic-vhost-sf.conf:/etc/apache2/sites-available/004-dynamic-vhost-sf.conf
             - ./config/apache/sites-available/ez5-common.conf:/etc/apache2/sites-available/ez5-common.conf
             - ./config/apache/sites-available/ezplatform-common.conf:/etc/apache2/sites-available/ezplatform-common.conf
             - ./logs/apache/:/var/log/apache2
