Add network setting for using a specific private network. Need update docker-compose to 1.12

--- a/docker-compose-dev-template.yml
+++ b/docker-compose-dev-template.yml
@@ -6,7 +6,19 @@
 # The docker-compose 'service' name corresponds to the top-level yml keys, whereas the container name is used in most
 # 'docker' commands.
 # Keeping a separate container name for each project allows to run many container platforms in parallel
-version: '2'
+# Compose file format  | Docker Engine release
+#         3.0 ; 3.1    |    1.13.0+
+#         2.1          |    1.12.0+
+#         2.0          |    1.10.0+
+#         1.0          |    1.9.1.+
+#
+version: '2.1'
+networks:
+    app_net:
+        driver: bridge
+        ipam:
+            config:
+            - subnet: 192.168.255.100/26 # subnet mask 255.255.255.192 ip usable [192.168.255.65 -> 192.168.255.126]
 services:
     web:
         image: klabs/apache_${DOCKER_PHP_VERSION}
@@ -31,7 +43,9 @@ services:
             - docker-compose.env.local
         cap_add:
             - SYS_PTRACE
-
+        networks:
+            app_net:
+                ipv4_address: 192.168.255.101
     cli:
         image: klabs/cli_${DOCKER_PHP_VERSION}
         hostname: ${DOCKER_PROJECT_NAME}_cli
@@ -55,6 +69,9 @@ services:
             - docker-compose.env.local
         cap_add:
             - SYS_PTRACE
+        networks:
+            app_net:
+                ipv4_address: 192.168.255.102
 
     memcached:
         image: klabs/memcached
@@ -69,6 +86,9 @@ services:
             - docker-compose.env.local
         cap_add:
             - SYS_PTRACE
+        networks:
+            app_net:
+                ipv4_address: 192.168.255.103
 
     solr:
         image: klabs/solr4
@@ -85,6 +105,9 @@ services:
             - docker-compose.env.local
         cap_add:
             - SYS_PTRACE
+        networks:
+            app_net:
+                ipv4_address: 192.168.255.104
 
     varnish:
         image: klabs/varnish
@@ -107,6 +130,9 @@ services:
         depends_on:
            - web
            - cli
+        networks:
+            app_net:
+                ipv4_address: 192.168.255.105
 
     haproxy:
         image: klabs/haproxy
@@ -123,6 +149,9 @@ services:
            - web
            - varnish
            - solr
+        networks:
+            app_net:
+                ipv4_address: 192.168.255.106
 
     mysql:
         image: klabs/mysql
@@ -142,6 +171,9 @@ services:
         cap_add:
             - SYS_PTRACE
         command: ["/root/bootstrap.sh", "mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci"]
+        networks:
+            app_net:
+                ipv4_address: 192.168.255.107
 
     # official phpmyadmin image
     phpmyadmin:
@@ -153,3 +185,6 @@ services:
             - docker-compose.env.local
         depends_on:
            - mysql
+        networks:
+            app_net:
+                ipv4_address: 192.168.255.108
