--- a/docker-compose-dev-template.yml
+++ b/docker-compose-dev-template.yml
@@ -153,3 +153,26 @@ services:
             - docker-compose.env.local
         depends_on:
            - mysql
+
+    # Graylog stack
+    mongo:
+      container_name: graylog-mongo
+      image: "mongo:3"
+      volumes: 
+        - ./data/graylog:/docker-entrypoint-initdb.d
+    elasticsearch:
+      container_name: graylog-elastic
+      image: "elasticsearch:2"
+      command: "elasticsearch -Des.cluster.name='graylog'"
+    graylog:
+      container_name: graylog-server
+      image: 'graylog2/server:latest'
+      environment:
+        GRAYLOG_PASSWORD_SECRET: somepasswordpepper
+        GRAYLOG_ROOT_PASSWORD_SHA2: 8c6976e5b5410415bde908bd4dee15dfb167a9c873fc4bb8a81f6f2ab448a918
+        GRAYLOG_WEB_ENDPOINT_URI: http://127.0.0.1:9000/api
+      depends_on:
+        - mongo
+        - elasticsearch
+      ports:
+        - "9000:9000"
