custom php log folder in PHP 7.1 base image

--- a/images/php71/Dockerfile
+++ b/images/php71/Dockerfile
@@ -20,7 +20,7 @@ RUN apt-get update && \
     libapache2-mod-php7.1 \
     php7.1-fpm \
     php7.1-cli \
-    php7.1-mysql \
+    php7.1-mysqlnd \
     php7.1-mcrypt \
     php7.1-imagick \
     php7.1-curl \
@@ -35,10 +35,12 @@ RUN apt-get update && \
     php7.1-xdebug \
     php7.1-sqlite3
 
-# -----------------------------------------------------------------------------
-
 # PHP config
 # -----------------------------------------------------------------------------
+# Custom PHP-FPM error log folder
+RUN mkdir /var/log/php/
+RUN sed -rie 's|error_log = /var/log/php7.1-fpm.log|error_log = /var/log/php/php7.1-fpm.log|g' /etc/php/7.1/fpm/php-fpm.conf
+
 # Disable xdebug
 RUN echo -e "[xdebug] \nxdebug.default_enable=Off" >> /etc/php/7.1/cli/php.ini \
     echo -e "[xdebug] \nxdebug.default_enable=Off" >> /etc/php/7.1/fpm/php.ini \
