--- a/images/apache_php54/Dockerfile
+++ b/images/apache_php54/Dockerfile
@@ -24,8 +24,7 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
     imagemagick \
     jpegoptim \
     poppler-utils \
-    openjdk-7-jre-headless \
-    netcat;
+    openjdk-7-jre-headless;
 
 # locale for date, time & currency php functions
 # q: for what is the locale setup needed ?
